# kl_challenge

./: .gitignore  readme.md  tflite_inference.py
assets/models/: 2.7_80x80_MiniFASNetV2.tflite
cmake/: generate_ar_input_file.cmake
silent_fas/: MiniFASNet.py
src/: CMakeLists.txt  model.cpp  model.hpp
